--- a/Portfolio Website/index.html
+++ b/Portfolio Website/index.html
@@ -191,7 +191,7 @@
             <a href="https://www.linkedin.com/in/brad-ramnarinesingh/" target="_blank"><i
                 class="fa fa-linkedin fa-2x"></i></a>
             <a href="https://github.com/Bradramnarinesingh" target="_blank"><i class="fa fa-github fa-2x"></i></a>
-            <a href="#" target="_blank"><i class="fa fa-twitter fa-2x"></i></a>
+            <a href="https://x.com/b_ramnarine" target="_blank"><i class="fa fa-twitter fa-2x"></i></a>
           </div>
 
           <!-- Second Navigation Menu -->
