added sections to website and updated navbar

--- a/Portfolio Website/index.html
+++ b/Portfolio Website/index.html
@@ -70,12 +70,10 @@
         <nav id="navn1">
           <a href="#experience"><img src="img/briefcase.png" /><span class="nav-text">Experience</span></a>
           <a href="#projects"><img src="img/project.png" /><span class="nav-text">Projects</span></a>
-          <!--
             <a href="#skills"
               ><img src="img/tools.png" /><span class="nav-text"
                 >Skills</span
               ></a>
-          -->
 
           <a href="brad_ramnarinesingh_resume.pdf" target="_blank"><img src="img/resume.png" /><span
               class="nav-text">Resume</span></a>
@@ -103,7 +101,7 @@
             <a href="#home">HOME</a>
             <a href="#experience">EXPERIENCE</a>
             <a href="#projects">PROJECTS</a>
-            <!--<a href="#skills">SKILLS</a> -->
+            <a href="#skills">SKILLS</a>
             <a style="font-weight: 900" href="brad_ramnarinesingh_resume.pdf" target="_blank">RESUME</a>
           </nav>
         </div>
@@ -124,14 +122,14 @@
           </p>
         </div>
 
-        <!-- Education Section 
+        <!-- Education Section -->
                     <div class="sectiontitle">
                         <div class="heading" id="experience">EDUCATION</div>
                     </div>
                     <div class="contentstyle">
                         <div class="header">University of Toronto</div>
                         <p>Computer Science, Mathematics, and Statistics (Expected in 2025)</p>
-                    </div> -->
+                    </div>
 
         <!-- Experience Section -->
         <div class="sectiontitle">
@@ -187,7 +185,7 @@
           </p>
         </div>
 
-        <!-- Skills Section 
+        <!-- Skills Section-->
             <div class="sectiontitle">
               <div class="heading" id="skills">TECHNICAL SKILLS</div>
             </div>
@@ -213,7 +211,7 @@
               </div>
             </div>
           </div>
-          -->
+
         <!-- Footer Section -->
         <footer></footer>
         <script>
