--- a/Portfolio Website/index.html
+++ b/Portfolio Website/index.html
@@ -20,7 +20,7 @@
   <script src="javascript/intersectionObserver.js"></script>
   <script src="javascript/navanimate.js"></script>
   <script src="javascript/vanta.js"></script>
-  
+
 
   <!-- Vanta.js and p5.js using CDN for Background Animation -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
@@ -45,7 +45,11 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900&family=Poppins:wght@300&display=swap"
     rel="stylesheet" />
-
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+    rel="stylesheet">
   <!-- CSS Files -->
   <link rel="stylesheet" type="text/css" href="css/style.css?v=1.1" />
   <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.4.2/css/all.css" />
@@ -70,10 +74,7 @@
         <nav id="navn1">
           <a href="#experience"><img src="img/briefcase.png" /><span class="nav-text">Experience</span></a>
           <a href="#projects"><img src="img/project.png" /><span class="nav-text">Projects</span></a>
-            <a href="#skills"
-              ><img src="img/tools.png" /><span class="nav-text"
-                >Skills</span
-              ></a>
+          <a href="#skills"><img src="img/tools.png" /><span class="nav-text">Skills</span></a>
 
           <a href="brad_ramnarinesingh_resume.pdf" target="_blank"><img src="img/resume.png" /><span
               class="nav-text">Resume</span></a>
@@ -123,13 +124,13 @@
         </div>
 
         <!-- Education Section -->
-                    <div class="sectiontitle">
-                        <div class="heading" id="experience">EDUCATION</div>
-                    </div>
-                    <div class="contentstyle">
-                        <div class="header">University of Toronto</div>
-                        <p>Computer Science, Mathematics, and Statistics (Expected in 2025)</p>
-                    </div>
+        <div class="sectiontitle">
+          <div class="heading" id="experience">EDUCATION</div>
+        </div>
+        <div class="contentstyle">
+          <div class="header">University of Toronto</div>
+          <p>Computer Science, Mathematics, and Statistics (Expected in 2025)</p>
+        </div>
 
         <!-- Experience Section -->
         <div class="sectiontitle">
@@ -186,40 +187,40 @@
         </div>
 
         <!-- Skills Section-->
-            <div class="sectiontitle">
-              <div class="heading" id="skills">TECHNICAL SKILLS</div>
+        <div class="sectiontitle">
+          <div class="heading" id="skills">TECHNICAL SKILLS</div>
+        </div>
+        <div class="contentstyle">
+          <div class="header">Languages</div>
+          <div class="responsivegrid">
+            <div class="box">
+              <div>
+                <i class="fa-brands fa-python icon"></i><a> Python</a>
+              </div>
             </div>
-            <div class="contentstyle">
-              <div class="header">Languages</div>
-              <div class="responsivegrid">
-                <div class="box">
-                  <div>
-                    <i class="fa-brands fa-python icon"></i><a> Python</a>
-                  </div>
-                </div>
-                <div class="box">
-                  <div><i class="fa-brands fa-java icon"></i><a> Java</a></div>
-                </div>
-                <div class="box">
-                  <div><i class="fa-brands fa-html5 icon"></i><a> HTML</a></div>
-                </div>
-                <div class="box">
-                  <div>
-                    <i class="fa-brands fa-css3-alt icon"></i><a> CSS</a>
-                  </div>
-                </div>
+            <div class="box">
+              <div><i class="fa-brands fa-java icon"></i><a> Java</a></div>
+            </div>
+            <div class="box">
+              <div><i class="fa-brands fa-html5 icon"></i><a> HTML</a></div>
+            </div>
+            <div class="box">
+              <div>
+                <i class="fa-brands fa-css3-alt icon"></i><a> CSS</a>
               </div>
             </div>
           </div>
-
-        <!-- Footer Section -->
-        <footer></footer>
-        <script>
-          document.getElementById("year").innerHTML =
-            new Date().getFullYear();
-        </script>
+        </div>
       </div>
+
+      <!-- Footer Section -->
+      <footer></footer>
+      <script>
+        document.getElementById("year").innerHTML =
+          new Date().getFullYear();
+      </script>
     </div>
+  </div>
 </body>
 
 </html>
