removed redundant code

--- a/Portfolio Website/index.html
+++ b/Portfolio Website/index.html
@@ -125,11 +125,17 @@
 
         <!-- Education Section -->
         <div class="sectiontitle">
-          <div class="heading" id="experience">EDUCATION</div>
+          <div class="heading" id="education">EDUCATION</div>
         </div>
         <div class="contentstyle">
           <div class="header">University of Toronto</div>
-          <p>Computer Science, Mathematics, and Statistics (Expected in 2025)</p>
+          <p>Bachelor of Science in Computer Science</p>
+          <p><i>2021 - Present</i></p>
+          <ul>
+            <li>Completed coursework in data structures, algorithms, software engineering, probability theory, statistical inference, and linear algebra.</li>
+            <li>Engaged in collaborative projects focusing on machine learning applications and statistical data analysis.</li>
+            <li>Maintained a strong academic record throughout the program.</li>
+          </ul>
         </div>
 
         <!-- Experience Section -->
@@ -162,20 +168,26 @@
             convenience.
           </p>
         </div>
-        <div class="contentstyle">
-          <div class="header">
-            ML House Price Prediction | Python, Scikit-Learn, Gradient Boosting, Pandas, Matplotlib
-          </div>
-          <p>
-            Developed a house price forecasting model using Python and Scikit-Learn's Gradient Boosting Regressor,
-            achieving a Mean Absolute Error of $33,429.72. Utilized Pandas for data cleaning and feature engineering,
-            including price change calculations and StandardScaler normalization to capture market trends. Created a
-            conservative growth algorithm with dynamic decay factors and sanity checks for reliable long-term
-            predictions. Integrated Neon PostgreSQL for efficient data management and a robust backend handling
-            real-time queries. Employed Matplotlib to visualize historical data and future price projections, enhancing
-            result interpretation and presentation.
-          </p>
-        </div>
+        <div class="contentstyle" 
+        onclick="window.open('https://github.com/Bradramnarinesingh/House-Prices-Prediction', '_blank')" 
+        style="cursor: pointer;">
+     <div class="header">
+       <span class="arrow-icon">
+         <i class="fas fa-arrow-up-right-from-square"></i>
+       </span>
+       ML House Price Prediction | Python, Scikit-Learn, Gradient Boosting, Pandas, Matplotlib
+     </div>
+     <p>
+       Developed a house price forecasting model using Python and Scikit-Learn's Gradient Boosting Regressor,
+       achieving a Mean Absolute Error of $33,429.72. Utilized Pandas for data cleaning and feature engineering,
+       including price change calculations and StandardScaler normalization to capture market trends. Created a
+       conservative growth algorithm with dynamic decay factors and sanity checks for reliable long-term
+       predictions. Integrated Neon PostgreSQL for efficient data management and a robust backend handling
+       real-time queries. Employed Matplotlib to visualize historical data and future price projections, enhancing
+       result interpretation and presentation.
+     </p>
+   </div>
+   
         <div class="contentstyle">
           <div class="header">Portfolio Website | HTML/CSS, JavaScript</div>
           <p>
