remove cursor glow

--- a/Portfolio Website/index.html
+++ b/Portfolio Website/index.html
@@ -101,7 +101,7 @@
             <a href="#home">HOME</a>
             <a href="#experience">EXPERIENCE</a>
             <a href="#projects">PROJECTS</a>
-            <a href="#skills">SKILLS</a>
+            <!-<a href="#skills">SKILLS</a>
             <a style="font-weight: 900" href="brad_ramnarinesingh_resume.pdf" target="_blank">RESUME</a>
           </nav>
         </div>
