reorganized file projects and added vercel.json

--- a/Portfolio Website/src/index.html
+++ b/Portfolio Website/src/index.html
@@ -43,7 +43,7 @@
 
   <!-- Page Title and Favicon -->
   <title>Brad Ramnarinesingh</title>
-  <link rel="icon" type="image/x-icon" href="img/logo.png" />
+  <link rel="icon" type="image/x-icon" href="/Portfolio Website/public/img/logo.png" />
 
   <!-- Fonts and Icons -->
   <script src="https://kit.fontawesome.com/fc2ecdd57a.js" crossorigin="anonymous"></script>
@@ -87,11 +87,11 @@
       <!-- Navigation Menu -->
       <div class="left-half">
         <nav id="navn1">
-          <a href="#experience"><img src="img/briefcase.png" /><span class="nav-text">Experience</span></a>
-          <a href="#projects"><img src="img/project.png" /><span class="nav-text">Projects</span></a>
-          <a href="#skills"><img src="img/tools.png" /><span class="nav-text">Skills</span></a>
+          <a href="#experience"><img src="/Portfolio Website/public/img/briefcase.png" /><span class="nav-text">Experience</span></a>
+          <a href="#projects"><img src="/Portfolio Website/public/img/project.png" /><span class="nav-text">Projects</span></a>
+          <a href="#skills"><img src="/Portfolio Website/public/img/tools.png" /><span class="nav-text">Skills</span></a>
 
-          <a href="brad_ramnarinesingh_resume.pdf" target="_blank"><img src="img/resume.png" /><span
+          <a href="/Portfolio Website/files/brad_ramnarinesingh_resume.pdf" target="_blank"><img src="/Portfolio Website/public/img/resume.png" /><span
               class="nav-text">Resume</span></a>
         </nav>
 
@@ -117,7 +117,7 @@
             <a href="#experience">EXPERIENCE</a>
             <a href="#projects">PROJECTS</a>
             <a href="#skills">SKILLS</a>
-            <a style="font-weight: 900" href="brad_ramnarinesingh_resume.pdf" target="_blank">RESUME</a>
+            <a style="font-weight: 900" href="/Portfolio Website/files/brad_ramnarinesingh_resume.pdf" target="_blank">RESUME</a>
           </nav>
         </div>
       </div>
