fixed webpage icon

--- a/Portfolio Website/public/index.html
+++ b/Portfolio Website/public/index.html
@@ -43,7 +43,7 @@
 
   <!-- Page Title and Favicon -->
   <title>Brad Ramnarinesingh</title>
-  <link rel="icon" type="image/x-icon" href="/Portfolio Website/public/img/logo.png" />
+  <link rel="icon" type="image/x-icon" href="./img/logo.png" />
 
   <!-- Fonts and Icons -->
   <script src="https://kit.fontawesome.com/fc2ecdd57a.js" crossorigin="anonymous"></script>
