--- a/Portfolio Website/public/index.html
+++ b/Portfolio Website/public/index.html
@@ -155,11 +155,10 @@
         <p>Bachelor of Science in Computer Science</p>
         <p><i>2021 - Present</i></p>
         <ul>
-          <li>Completed coursework in data structures, algorithms, software engineering, probability theory, statistical
-            inference, and linear algebra.</li>
-          <li>Engaged in collaborative projects focusing on machine learning applications and statistical data analysis.
+          <li>Studied key concepts in programming, problem-solving, and data analysis, including data structures, algorithms, software engineering, probability, and statistics.</li>
+          <li>Gained hands-on experience through coursework and assignments involving coding, mathematical problem-solving, and data interpretation
           </li>
-          <li>Maintained a strong academic record throughout the program.</li>
+          <li>Maintained a strong academic record while actively participating in computer science and mathematics communities.</li>
         </ul>
       </div>
 
