--- a/Portfolio Website/public/404.html
+++ b/Portfolio Website/public/404.html
@@ -38,10 +38,16 @@
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      height: 100vh;
+      min-height: 100vh;
       text-align: center;
       padding: 20px;
       z-index: 1;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      width: 100%;
+      max-width: 800px;
     }
 
     .error-code {
@@ -58,6 +64,7 @@
       color: #e6e6e6;
       margin: 20px 0;
       max-width: 600px;
+      padding: 0 20px;
     }
 
     .back-home {
@@ -69,7 +76,7 @@
       border-radius: 25px;
       margin-top: 20px;
       transition: all 0.3s ease;
-      border: 1px solid rgba(255, 255, 255, 0.2);
+      border: 0.5px solid rgba(255, 255, 255, 0.2);
     }
 
     .back-home:hover {
