updated projects desc.

--- a/Portfolio Website/public/index.html
+++ b/Portfolio Website/public/index.html
@@ -155,10 +155,13 @@
         <p>Bachelor of Science in Computer Science</p>
         <p><i>2021 - Present</i></p>
         <ul>
-          <li>Studied key concepts in programming, problem-solving, and data analysis, including data structures, algorithms, software engineering, probability, and statistics.</li>
-          <li>Gained hands-on experience through coursework and assignments involving coding, mathematical problem-solving, and data interpretation
+          <li>Studied key concepts in programming, problem-solving, and data analysis, including data structures,
+            algorithms, software engineering, probability, and statistics.</li>
+          <li>Gained hands-on experience through coursework and assignments involving coding, mathematical
+            problem-solving, and data interpretation
           </li>
-          <li>Maintained a strong academic record while actively participating in computer science and mathematics communities.</li>
+          <li>Maintained a strong academic record while actively participating in computer science and mathematics
+            communities.</li>
         </ul>
       </div>
 
@@ -202,13 +205,12 @@
           ML House Price Prediction | Python, Scikit-Learn, Gradient Boosting, Pandas, Matplotlib
         </div>
         <p>
-          Developed a house price forecasting model using Python and Scikit-Learn's Gradient Boosting Regressor,
-          achieving a Mean Absolute Error of $33,429.72. Utilized Pandas for data cleaning and feature engineering,
-          including price change calculations and StandardScaler normalization to capture market trends. Created a
-          conservative growth algorithm with dynamic decay factors and sanity checks for reliable long-term
-          predictions. Integrated Neon PostgreSQL for efficient data management and a robust backend handling
-          real-time queries. Employed Matplotlib to visualize historical data and future price projections, enhancing
-          result interpretation and presentation.
+          Developed a house price forecasting model using Python and Scikit-Learn’s Gradient Boosting Regressor,
+          achieving a Mean Absolute Error of $33,429.72. Processed and cleaned real estate data with Pandas,
+          implementing feature engineering techniques such as price change calculations and StandardScaler normalization
+          to capture market trends. Designed a conservative growth algorithm with a dynamic decay factor and sanity
+          checks to improve the reliability of long-term predictions. Visualized historical price trends and future
+          projections using Matplotlib, enabling better interpretation and analysis of market patterns.
         </p>
       </div>
 
