--- a/Portfolio Website/public/index.html
+++ b/Portfolio Website/public/index.html
@@ -214,8 +214,13 @@
         </p>
       </div>
 
-      <div class="contentstyle">
-        <div class="header">Portfolio Website | HTML/CSS, JavaScript</div>
+      
+      <div class="contentstyle clickable"
+        onclick="window.open('https://github.com/Bradramnarinesingh/Portfolio-Website', '_blank')">
+        <div class="header">
+          <span class="arrow-icon">
+            <i class="fas fa-arrow-up-right-from-square"></i>
+          </span>Portfolio Website | HTML/CSS, JavaScript</div>
         <p>
           Designed and built a personal portfolio website using HTML, CSS, and JavaScript to effectively showcase
           projects and skills. Implemented responsive design principles to ensure consistent performance and
