--- a/Portfolio Website/public/index.html
+++ b/Portfolio Website/public/index.html
@@ -183,12 +183,8 @@
       <div class="sectiontitle">
         <div class="heading" id="projects">PROJECTS</div>
       </div>
-      <div class="contentstyle clickable"
-        onclick="window.open('https://github.com/Bradramnarinesingh/fake-news-detector', '_blank')">
+      <div class="contentstyle">
         <div class="header">
-          <span class="arrow-icon">
-            <i class="fas fa-arrow-up-right-from-square"></i>
-          </span>
           Fake News Detection AI | TensorFlow, NLP (TF-IDF)
         </div>
         <p>
