--- a/Portfolio Website/public/404.html
+++ b/Portfolio Website/public/404.html
@@ -22,10 +22,10 @@
 
   <!-- CSS Files -->
   <link rel="stylesheet" type="text/css" href="css/base.css" />
-  <link rel="stylesheet" type="text/css" href="css/components/header.css" />
-  <link rel="stylesheet" type="text/css" href="css/components/layout.css" />
-  <link rel="stylesheet" type="text/css" href="css/components/cards.css" />
-  <link rel="stylesheet" type="text/css" href="css/components/animations.css" />
+  <link rel="stylesheet" type="text/css" href="css/header.css" />
+  <link rel="stylesheet" type="text/css" href="css/layout.css" />
+  <link rel="stylesheet" type="text/css" href="css/cards.css" />
+  <link rel="stylesheet" type="text/css" href="css/animations.css" />
   <link rel="stylesheet" type="text/css" href="css/responsive.css" />
   <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.4.2/css/all.css" />
   <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.4.2/css/sharp-solid.css" />
