--- a/Portfolio Website/public/index.html
+++ b/Portfolio Website/public/index.html
@@ -59,10 +59,10 @@
     rel="stylesheet">
   <!-- CSS Files -->
   <link rel="stylesheet" type="text/css" href="css/base.css" />
-  <link rel="stylesheet" type="text/css" href="css/components/header.css" />
-  <link rel="stylesheet" type="text/css" href="css/components/layout.css" />
-  <link rel="stylesheet" type="text/css" href="css/components/cards.css" />
-  <link rel="stylesheet" type="text/css" href="css/components/animations.css" />
+  <link rel="stylesheet" type="text/css" href="css/header.css" />
+  <link rel="stylesheet" type="text/css" href="css/layout.css" />
+  <link rel="stylesheet" type="text/css" href="css/cards.css" />
+  <link rel="stylesheet" type="text/css" href="css/animations.css" />
   <link rel="stylesheet" type="text/css" href="css/responsive.css" />
   <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.4.2/css/all.css" />
   <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.4.2/css/sharp-solid.css" />
@@ -205,7 +205,7 @@
           ML House Price Prediction | Python, Scikit-Learn, Gradient Boosting, Pandas, Matplotlib
         </div>
         <p>
-          Developed a house price forecasting model using Python and Scikit-Learn’s Gradient Boosting Regressor,
+          Developed a house price forecasting model using Python and Scikit-Learn's Gradient Boosting Regressor,
           achieving a Mean Absolute Error of $33,429.72. Processed and cleaned real estate data with Pandas,
           implementing feature engineering techniques such as price change calculations and StandardScaler normalization
           to capture market trends. Designed a conservative growth algorithm with a dynamic decay factor and sanity
