--- a/Portfolio Website/public/index.html
+++ b/Portfolio Website/public/index.html
@@ -90,45 +90,47 @@
       <div class="cursor-glow"></div>
 
       <!-- Navigation Menu -->
-      <div class="left-half">
-        <nav id="navn1">
-          <a href="#experience"><img src="./img/briefcase.png" alt="Briefcase icon" /><span
-              class="nav-text">Experience</span></a>
-          <a href="#projects"><img src="./img/project.png" alt="Project icon" /><span
-              class="nav-text">Projects</span></a>
-          <a href="#skills"><img src="./img/tools.png" alt="Tools icon" /><span class="nav-text">Skills</span></a>
+      <main class="main-container">
+        <div class="left-half">
+          <nav id="navn1">
+            <a href="#experience"><img src="./img/briefcase.png" alt="Briefcase icon" /><span
+                class="nav-text">Experience</span></a>
+            <a href="#projects"><img src="./img/project.png" alt="Project icon" /><span
+                class="nav-text">Projects</span></a>
+            <a href="#skills"><img src="./img/tools.png" alt="Tools icon" /><span class="nav-text">Skills</span></a>
 
-          <a href="./files/brad_ramnarinesingh_resume.pdf" target="_blank"><img src="./img/resume.png"
-              alt="Resume icon" /><span class="nav-text">Resume</span></a>
-        </nav>
-
-        <!-- Main Profile Card -->
-        <div class="content">
-          <div class="card">
-            <div id="name">Brad Ramnarinesingh</div>
-            <div id="title">Computer Science Student</div>
-            <div id="loc"><i class="fa fa-map-marker"></i>Toronto</div>
-          </div>
-
-          <div id="social">
-            <div id="soctitle">Find me</div>
-            <a href="https://www.linkedin.com/in/brad-ramnarinesingh/" target="_blank" rel="noopener"><i
-                class="fa fa-linkedin fa-2x"></i></a>
-            <a href="https://github.com/Bradramnarinesingh" target="_blank" rel="noopener"><i
-                class="fa fa-github fa-2x"></i></a>
-            <a href="https://x.com/b_ramnarine" target="_blank" rel="noopener"><i class="fa fa-twitter fa-2x"></i></a>
-          </div>
-
-          <!-- Second Navigation Menu -->
-          <nav id="navn">
-            <a href="#home">HOME</a>
-            <a href="#experience">EXPERIENCE</a>
-            <a href="#projects">PROJECTS</a>
-            <a href="#skills">SKILLS</a>
-            <a class="resume-link" href="./files/brad_ramnarinesingh_resume.pdf" target="_blank">RESUME</a>
+            <a href="./files/brad_ramnarinesingh_resume.pdf" target="_blank"><img src="./img/resume.png"
+                alt="Resume icon" /><span class="nav-text">Resume</span></a>
           </nav>
+
+          <!-- Main Profile Card -->
+          <div class="content">
+            <div class="card">
+              <div id="name">Brad Ramnarinesingh</div>
+              <div id="title">Computer Science Student</div>
+              <div id="loc"><i class="fa fa-map-marker"></i>Toronto</div>
+            </div>
+
+            <div id="social">
+              <div id="soctitle">Find me</div>
+              <a href="https://www.linkedin.com/in/brad-ramnarinesingh/" target="_blank" rel="noopener"><i
+                  class="fa fa-linkedin fa-2x"></i></a>
+              <a href="https://github.com/Bradramnarinesingh" target="_blank" rel="noopener"><i
+                  class="fa fa-github fa-2x"></i></a>
+              <a href="https://x.com/b_ramnarine" target="_blank" rel="noopener"><i class="fa fa-twitter fa-2x"></i></a>
+            </div>
+
+            <!-- Second Navigation Menu -->
+            <nav id="navn">
+              <a href="#home">HOME</a>
+              <a href="#experience">EXPERIENCE</a>
+              <a href="#projects">PROJECTS</a>
+              <a href="#skills">SKILLS</a>
+              <a class="resume-link" href="./files/brad_ramnarinesingh_resume.pdf" target="_blank">RESUME</a>
+            </nav>
+          </div>
         </div>
-      </div>
+      </main>
     </div>
 
     <!-- Right Side Content -->
@@ -201,8 +203,7 @@
         <div class="header">
           <span class="arrow-icon">
             <i class="fas fa-arrow-up-right-from-square"></i>
-          </span>
-          ML House Price Prediction | Python, Scikit-Learn, Gradient Boosting, Pandas, Matplotlib
+          </span>ML House Price Prediction | Python, Scikit-Learn, Gradient Boosting, Pandas, Matplotlib
         </div>
         <p>
           Developed a house price forecasting model using Python and Scikit-Learn's Gradient Boosting Regressor,
